--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.milight",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "compatibility": "0.x || 1.x",
   "category": "lights",
   "name": {
@@ -26,8 +26,8 @@
         "nl": "MiLight RGB Lamp"
       },
       "images": {
-        "large": "./drivers/socket/assets/images/large.jpg",
-        "small": "./drivers/socket/assets/images/small.jpg"
+        "large": "./drivers/rgb_bulb/assets/images/large.jpg",
+        "small": "./drivers/rgb_bulb/assets/images/small.jpg"
       },
       "class": "light",
       "capabilities": [ "onoff", "dim", "light_hue" ],
@@ -55,8 +55,8 @@
         "nl": "MiLight Witte Lamp"
       },
       "images": {
-        "large": "./drivers/socket/assets/images/large.jpg",
-        "small": "./drivers/socket/assets/images/small.jpg"
+        "large": "./drivers/white_bulb/assets/images/large.jpg",
+        "small": "./drivers/white_bulb/assets/images/small.jpg"
       },
       "class": "light",
       "capabilities": [ "onoff", "dim", "light_temperature" ],
@@ -74,6 +74,30 @@
         {
           "id": "add_devices",
           "template": "add_devices"
+        }
+      ],
+      "settings": [
+        {
+          "type": "group",
+            "label": {
+                "en": "General settings",
+                "nl": "Algemene instellingen"
+            },
+          "children": [
+            {
+              "id": "fade_speed",
+              "type": "number",
+              "label": {
+                  "en": "Fade speed (0 - 6)",
+                  "nl": "Snelheid van vervagen (0 - 6)"
+              },
+              "value": 1,
+              "attr": {
+                  "min": 0,
+                  "max": 6
+              }
+            }
+          ]
         }
       ]
     }
