--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.milight",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "compatibility": "0.x || 1.x",
   "category": "lights",
   "name": {
@@ -30,7 +30,12 @@
         "small": "./drivers/rgb_bulb/assets/images/small.jpg"
       },
       "class": "light",
-      "capabilities": [ "onoff", "dim", "light_hue", "light_temperature" ],
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_hue",
+        "light_temperature"
+      ],
       "pair": [
         {
           "id": "start"
@@ -59,60 +64,11 @@
         "small": "./drivers/rgb_bulb/assets/images/small.jpg"
       },
       "class": "light",
-      "capabilities": [ "onoff", "dim", "light_hue" ],
-      "pair": [
-        {
-          "id": "start"
-        },
-        {
-          "id": "list_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_devices"
-          }
-        },
-        {
-          "id": "add_devices",
-          "template": "add_devices"
-        }
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_hue"
       ],
-        "settings": [
-        {
-          "type": "group",
-            "label": {
-                "en": "General settings",
-                "nl": "Algemene instellingen"
-            },
-          "children": [
-            {
-              "id": "fade_speed",
-              "type": "number",
-              "label": {
-                  "en": "Fade speed (0 - 6)",
-                  "nl": "Snelheid van vervagen (0 - 6)"
-              },
-              "value": 1,
-              "attr": {
-                  "min": 0,
-                  "max": 6
-              }
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "id": "white_bulb",
-      "name": {
-        "en": "White Bulb",
-        "nl": "Witte Lamp"
-      },
-      "images": {
-        "large": "./drivers/white_bulb/assets/images/large.jpg",
-        "small": "./drivers/white_bulb/assets/images/small.jpg"
-      },
-      "class": "light",
-      "capabilities": [ "onoff", "dim", "light_temperature" ],
       "pair": [
         {
           "id": "start"
@@ -132,22 +88,79 @@
       "settings": [
         {
           "type": "group",
-            "label": {
-                "en": "General settings",
-                "nl": "Algemene instellingen"
-            },
+          "label": {
+            "en": "General settings",
+            "nl": "Algemene instellingen"
+          },
           "children": [
             {
               "id": "fade_speed",
               "type": "number",
               "label": {
-                  "en": "Fade speed (0 - 6)",
-                  "nl": "Snelheid van vervagen (0 - 6)"
+                "en": "Fade speed (0 - 6)",
+                "nl": "Snelheid van vervagen (0 - 6)"
               },
               "value": 1,
               "attr": {
-                  "min": 0,
-                  "max": 6
+                "min": 0,
+                "max": 6
+              }
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "id": "white_bulb",
+      "name": {
+        "en": "White Bulb",
+        "nl": "Witte Lamp"
+      },
+      "images": {
+        "large": "./drivers/white_bulb/assets/images/large.jpg",
+        "small": "./drivers/white_bulb/assets/images/small.jpg"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_temperature"
+      ],
+      "pair": [
+        {
+          "id": "start"
+        },
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "settings": [
+        {
+          "type": "group",
+          "label": {
+            "en": "General settings",
+            "nl": "Algemene instellingen"
+          },
+          "children": [
+            {
+              "id": "fade_speed",
+              "type": "number",
+              "label": {
+                "en": "Fade speed (0 - 6)",
+                "nl": "Snelheid van vervagen (0 - 6)"
+              },
+              "value": 1,
+              "attr": {
+                "min": 0,
+                "max": 6
               }
             }
           ]
@@ -155,6 +168,24 @@
       ]
     }
   ],
+  "flow": {
+    "actions": [
+      {
+        "id": "white_mode",
+        "title": {
+          "en": "Enable white mode",
+          "nl": "Activeer wit modus"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=rgbw_bulb"
+          }
+        ]
+      }
+    ]
+  },
   "dependencies": {
     "node-milight-promise": "0.0.4"
   }
