Major update, adds light_mode functionality

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "com.milight",
-  "version": "1.2.4",
-  "compatibility": "0.x || 1.x",
+  "version": "2.0.0",
+  "compatibility": ">=0.8.33",
   "category": "lights",
   "name": {
     "en": "Milight (EasyBulb)",
@@ -34,7 +34,8 @@
         "onoff",
         "dim",
         "light_hue",
-        "light_temperature"
+        "light_temperature",
+        "light_mode"
       ],
       "pair": [
         {
