--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Connect your MiLight (EasyBulb) light bulbs with Homey.",
   "main": "app.js",
   "dependencies": {
+    "homey-devicedriver": "file:../../node-homey-devicedriver",
     "homey-log": "~1.0.1",
-    "homey-wifidriver": "file:../../node-homey-wifidriver",
     "onecolor": "~3.0.4",
     "tcp-ping": "~0.1.1"
   },
