--- a/app.json
+++ b/app.json
@@ -52,6 +52,21 @@
 					"id": "add_devices",
 					"template": "add_devices"
 				}
+			],
+			"settings": [
+				{
+					"id": "invert_red_and_green",
+					"type": "checkbox",
+					"value": false,
+					"label": {
+						"en": "Invert red and green values",
+						"nl": "Wissel rode en groene waarden om"
+					},
+					"hint": {
+						"en": "Some Milight RGBW controllers have the red and green values switched. If Homey sets a different color on your RGBW led strip than expected, enable this setting.",
+						"nl": "Sommige Milight RGBW controllers hebben de rode en groene waarden omgedraait. Als Homey een andere kleur instelt op de RGBW led strip dan verwacht, vink dan deze checkbox aan."
+					}
+				}
 			]
 		},
 		{
