--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "run": "homeyConfig compose && athom project --run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
