--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Connect your MiLight (EasyBulb) light bulbs with Homey.",
   "main": "app.js",
   "dependencies": {
-    "homey-devicedriver": "file:../../node-homey-devicedriver",
+    "homey-devicedriver": "file:../../node-homey-basicdriver",
     "homey-log": "~1.0.1",
-    "node-milight-promise": "^0.1.2",
+    "node-milight-promise": "^0.1.3",
     "onecolor": "~3.0.4",
-    "tcp-ping": "~0.1.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
