--- a/app.json
+++ b/app.json
@@ -20,14 +20,14 @@
   },
   "drivers": [
     {
-      "id": "rgbw_bulb",
+      "id": "rgbww_bulb",
       "name": {
-        "en": "RGBW Bulb",
-        "nl": "RGBW Lamp"
+        "en": "RGBWW Bulb",
+        "nl": "RGBWW Lamp"
       },
       "images": {
-        "large": "./drivers/rgb_bulb/assets/images/large.jpg",
-        "small": "./drivers/rgb_bulb/assets/images/small.jpg"
+        "large": "./drivers/rgbww_bulb/assets/images/large.jpg",
+        "small": "./drivers/rgbww_bulb/assets/images/small.jpg"
       },
       "class": "light",
       "capabilities": [
@@ -37,6 +37,84 @@
         "light_temperature",
         "light_mode"
       ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
+      "pair": [
+        {
+          "id": "start"
+        },
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "settings": [
+        {
+          "id": "invert_red_and_green",
+          "type": "checkbox",
+          "value": false,
+          "label": {
+            "en": "Invert red and green values",
+            "nl": "Wissel rode en groene waarden om"
+          },
+          "hint": {
+            "en": "Some Milight RGBWW controllers have the red and green values switched. If Homey sets a different color on your RGBWW led strip than expected, enable this setting.",
+            "nl": "Sommige Milight RGBWW controllers hebben de rode en groene waarden omgedraait. Als Homey een andere kleur instelt op de RGBWW led strip dan verwacht, vink dan deze checkbox aan."
+          }
+        },
+        {
+          "id": "hue_calibration",
+          "type": "number",
+          "value": 0,
+          "attr": {
+            "min": -0.5,
+            "max": 0.5,
+            "step": 0.01
+          },
+          "label": {
+            "en": "Hue calibration",
+            "nl": "Kleur tint kalibratie"
+          },
+          "hint": {
+            "en": "Use this value to calibrate the hue value send to the device. This can be used to compensate for deviating colors.",
+            "nl": "Gebruik deze waarde om de kleur tint te kalibreren. Dit kan gebruikt worden om te compenseren voor afwijkende kleuren."
+          }
+        }
+      ]
+    },
+    {
+      "id": "rgbw_bulb",
+      "name": {
+        "en": "RGBW Bulb",
+        "nl": "RGBW Lamp"
+      },
+      "images": {
+        "large": "./drivers/rgbw_bulb/assets/images/large.jpg",
+        "small": "./drivers/rgbw_bulb/assets/images/small.jpg"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_hue",
+        "light_temperature",
+        "light_mode"
+      ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
       "pair": [
         {
           "id": "start"
@@ -103,6 +181,11 @@
         "dim",
         "light_hue"
       ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
       "pair": [
         {
           "id": "start"
@@ -156,6 +239,11 @@
         "dim",
         "light_temperature"
       ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
       "pair": [
         {
           "id": "start"
@@ -187,6 +275,20 @@
             "name": "deviceData",
             "type": "device",
             "filter": "driver_uri=homey:app:com.milight&driver_id=rgbw_bulb"
+          }
+        ]
+      },
+      {
+        "id": "white_mode",
+        "title": {
+          "en": "Enable white mode",
+          "nl": "Activeer wit modus"
+        },
+        "args": [
+          {
+            "name": "deviceData",
+            "type": "device",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
           }
         ]
       },
@@ -289,6 +391,104 @@
         ]
       },
       {
+        "id": "disco_mode",
+        "title": {
+          "en": "Enable random effect mode",
+          "nl": "Zet willekeurige effect modus aan"
+        },
+        "args": [
+          {
+            "name": "deviceData",
+            "type": "device",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
+          }
+        ]
+      },
+      {
+        "id": "disco_mode_specific",
+        "title": {
+          "en": "Enable specific effect mode",
+          "nl": "Zet specifieke effect modus aan"
+        },
+        "args": [
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "value": "1",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Effect mode 1",
+                  "nl": "Effect modus 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Effect mode 2",
+                  "nl": "Effect modus 2"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Effect mode 3",
+                  "nl": "Effect modus 3"
+                }
+              },
+              {
+                "id": "4",
+                "label": {
+                  "en": "Effect mode 4",
+                  "nl": "Effect modus 4"
+                }
+              },
+              {
+                "id": "5",
+                "label": {
+                  "en": "Effect mode 5",
+                  "nl": "Effect modus 5"
+                }
+              },
+              {
+                "id": "6",
+                "label": {
+                  "en": "Effect mode 6",
+                  "nl": "Effect modus 6"
+                }
+              },
+              {
+                "id": "7",
+                "label": {
+                  "en": "Effect mode 7",
+                  "nl": "Effect modus 7"
+                }
+              },
+              {
+                "id": "8",
+                "label": {
+                  "en": "Effect mode ",
+                  "nl": "Effect modus 8"
+                }
+              },
+              {
+                "id": "9",
+                "label": {
+                  "en": "Effect mode 9",
+                  "nl": "Effect modus 9"
+                }
+              }
+            ]
+          },
+          {
+            "name": "deviceData",
+            "type": "device",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
+          }
+        ]
+      },
+      {
         "id": "enable_night_mode",
         "title": {
           "en": "Enable night mode",
@@ -299,6 +499,39 @@
             "name": "deviceData",
             "type": "device",
             "filter": "driver_uri=homey:app:com.milight&driver_id=rgbw_bulb"
+          }
+        ]
+      },
+      {
+        "id": "enable_night_mode",
+        "title": {
+          "en": "Enable night mode",
+          "nl": "Schakel nacht modus in"
+        },
+        "args": [
+          {
+            "name": "deviceData",
+            "type": "device",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
+          }
+        ]
+      },
+      {
+        "id": "set_color_rgbww",
+        "title": {
+          "en": "Set a color",
+          "nl": "Stel een kleur in"
+        },
+        "args": [
+          {
+            "name": "deviceData",
+            "type": "device",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
+          },
+          {
+            "name": "color",
+            "type": "color",
+            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
           }
         ]
       },
