--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "homey-devicedriver": "file:../../node-homey-basicdriver",
-    "homey-log": "~1.0.1",
-    "node-milight-promise": "^0.1.3",
-    "onecolor": "~3.0.4",
-    "underscore": "^1.8.3"
+    "homey-log": "1.0.1",
+    "node-milight-promise": "0.1.3",
+    "onecolor": "3.0.4",
+    "underscore": "1.8.3"
   },
   "devDependencies": {},
   "scripts": {
