--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Connect your MiLight (EasyBulb) light bulbs with Homey.",
   "main": "app.js",
   "dependencies": {
-    "homey-log": "1.0.3",
+    "homey-log": "^1.0.4",
     "homey-wifidriver": "git+https://github.com/athombv/node-homey-wifidriver.git",
     "node-milight-promise": "0.1.3",
     "onecolor": "3.0.4",
