--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.milight",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "compatibility": ">=1.5.0",
   "category": "lights",
   "sdk": 2,
@@ -43,6 +43,7 @@
         "onoff",
         "dim",
         "light_hue",
+        "light_saturation",
         "light_temperature",
         "light_mode"
       ],
@@ -517,25 +518,6 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
-          }
-        ]
-      },
-      {
-        "id": "set_color_rgb",
-        "title": {
-          "en": "Set a color",
-          "nl": "Stel een kleur in"
-        },
-        "args": [
-          {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
-          },
-          {
-            "name": "color",
-            "type": "color",
             "filter": "driver_uri=homey:app:com.milight&driver_id=rgbww_bulb"
           }
         ]
